--- a/WEB/Front-end/src/assets/main.css
+++ b/WEB/Front-end/src/assets/main.css
@@ -16,6 +16,18 @@ a,
   padding: 3px;
 }
 
+h2 {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.back-link {
+  display: flex;
+  justify-content: flex-start;
+  font-size: 15px;
+  font-weight: bold;
+}
+
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
